Scroll bug on mobile

--- a/src/components/dom/hero/hero.module.scss
+++ b/src/components/dom/hero/hero.module.scss
@@ -35,7 +35,7 @@
 .loader {
   position: fixed;
   width: 100vw;
-  height: 100vh;
+  height: 100svh;
   top: 0;
   left: 0;
   background-color: black;
